# oop-da_labs

./: LICENSE
DA_labs/lab1/: input.txt  main.cpp
DA_labs/lab2/: lab2_main.cpp
DA_labs/lab4/: CMakeLists.txt  z_pattern.cpp
main/lab1/: CMakeLists.txt  test_binary_count.cpp
main/lab2/: lab2_main.cpp
main/lab2/include/: dynamic_array.h
oop/lab1/: utils.h
oop/lab2/: CMakeLists.txt
oop/lab2/include/: octal.h  utils.h
oop/lab2/src/: dynamic_array.cpp  octal.cpp  utils.cpp
oop/lab3/: CMakeLists.txt  main.cpp
oop/lab3/figures/: CMakeLists.txt  array.cpp  array.h  figures.cpp  figures.h  point.cpp  point.h
oop/lab3/lab3/: CMakeLists.txt  Makefile  run.cpp
oop/lab3/lab3/include/figures/: Point.hpp  Rectangle.hpp  Square.hpp  Triangle.hpp
oop/lab3/lab3/include/interfaces/: figure.hpp
oop/lab3/lab3/src/containers/: FiguresVector.cpp  vector.cpp
oop/lab3/lab3/src/figures/: Point.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp
oop/lab3/lab3/tests/: point_tests.cpp  rectangle_tests.cpp  square_tests.cpp  triangle_tests.cpp  vector_tests.cpp
oop/lab3/test/: CMakeLists.txt  test.cpp
oop/lab4/: CMakeLists.txt  main.cpp
oop/lab4/figures/: array.h  figures.h  point.h
oop/lab4/test/: CMakeLists.txt  test.cpp
oop/lab5/: CMakeLists.txt  main.cpp
oop/lab5/include/: allocator.h  vector.h
oop/lab5/lab5/: CMakeLists.txt  Makefile  run.cpp
oop/lab5/lab5/include/allocator/: Allocator.h
oop/lab5/lab5/include/containers/: Queue.h
oop/lab5/lab5/include/iterators/: QueueIterator.h
oop/lab5/lab5/src/allocator/: Allocator.cpp
oop/lab5/lab5/src/containers/: Queue.cpp
oop/lab5/lab5/src/iterators/: QueueIterator.cpp
oop/lab5/lab5/tests/: allocator_tests.cpp  queue_tests.cpp
oop/lab5/test/: CMakeLists.txt  test.cpp
oop/lab6/lab6/: CMakeLists.txt  run.cpp
oop/lab6/lab6/game_data/: npc.txt
oop/lab6/lab6/include/factory/: NPCFactory.h
oop/lab6/lab6/include/mobs/: NPC.h  Orc.h  Outlaw.h  Werewolf.h
oop/lab6/lab6/logs/: battle_logs.txt
oop/lab6/lab6/src/factory/: NPCFactory.cpp
oop/lab6/lab6/tests/: game_tests.cpp
